tooling/nargo_cli/tests/snapshots/compile_failure/type_annotation_needed_on_struct_constructor/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type annotation needed
  ┌─ src/main.nr:5:15
  │
5 │     let foo = Foo {};
  │               ------ Could not determine the type of the generic argument `T` declared on the struct `Foo`
  │

Aborting due to 1 previous error
