tooling/nargo_cli/tests/snapshots/compile_failure/type_annotation_needed_on_struct_constructor/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type annotation needed
  ┌─ src/main.nr:5:15
  │
5 │     let foo = Foo {};
  │               ------ Could not determine the type of the generic argument `T` declared on the struct `Foo`
  │

Aborting due to 1 previous error
